feat: Be Able to Configure an External Catalog to Use org.apache.iceberg.gcp.auth.GoogleAuthManager as it's AuthManager (#3451). It allows an "End-User Credentials (Pass-Through) Approach" in that Polaris provides credentials for accessing storage rather than taking them from the BigLake metastore.
As part of the work, stopped a transitive dependency pulling in incompatible versions of proto-google-cloud-iamcredentials-v1 (protobuf 4.33.2) vs. protobuf-java (4.32.1). ProtobufSmokeTest should stop future regressions.

New DTO and DPO created but no changes were made to others.